--- a/src/components/sidenav/SideNav.scss
+++ b/src/components/sidenav/SideNav.scss
@@ -1,5 +1,5 @@
 .sidebar {
-  position: fixed;
+  position: absolute;
   .aside {
     left: 0;
     width: 200px;
@@ -12,8 +12,8 @@
   max-width: 200px;
   margin-bottom: 20px;
   left: 0px;
-  height: calc(90vh - 80px) !important;
-  margin-top: 17px;
+  height: 400px;
+  margin-top: 76px;
   background: #fff;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   left: 8px;
@@ -70,7 +70,8 @@
   /* For mobile phones: */
   .sidebar {
     position: relative;
-    height: calc(52vh - 80px) !important;
+    margin-top: 13px;
+    height: 200px !important;
 
     max-width: 359px;
     .aside {
@@ -79,6 +80,7 @@
         margin: 13px;
       }
       ul {
+        top: 5px;
         li {
           padding: 5px 2px 5px 35px;
         }
